resources/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service # 서비스를 설명하는 데이터
  namespace: team-4
spec: # 서비스의 스팩
  type: NodePort # 디폴트는 클러스터 IP
  selector: # 클라이언트 서비스랑 컨테이너랑 연결
    app: client-app # 특정 파드의 라벨 연결하는것이다.
  ports: # 서비스의 포트
  - name: http
    protocol: TCP
    port: 3000 # 서비스의 포트( 우리가 서비스를 통해서 접근하기에 서비스의 포트) eks 들어가면 보안그룹
    targetPort: 3000 # 컨테이너가 사용하는 포트와 연결
